--- a/.env.example
+++ b/.env.example
@@ -73,7 +73,8 @@ PUSHER_APP_CLUSTER=
 
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
-GOOGLE_CALLBACK_URL="${APP_URL}/callback/google"
+GOOGLE_CALLBACK_URL="${APP_URL}/admin/callback/google"
+GOOGLE_CALLBACK_INTEGRATION_URL="${APP_URL}/admin/integration/callback/google"
 
 VITE_APP_NAME="${APP_NAME}"
 VITE_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
