--- a/composer.json
+++ b/composer.json
@@ -15,11 +15,11 @@
         "laravel/sanctum": "^4.0",
         "laravel/socialite": "^5.12",
         "laravel/tinker": "^2.9",
+        "opcodesio/log-viewer": "^3.8",
         "spatie/laravel-permission": "^6.4",
         "tightenco/ziggy": "^2.0"
     },
     "require-dev": {
-        "barryvdh/laravel-debugbar": "^3.13",
         "fakerphp/faker": "^1.23",
         "laravel/pint": "^1.13",
         "laravel/sail": "^1.29",
