--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "laravel/socialite": "^5.12",
         "laravel/tinker": "^2.9",
         "opcodesio/log-viewer": "^3.8",
+        "spatie/laravel-activitylog": "^4.8",
         "spatie/laravel-permission": "^6.4",
         "tightenco/ziggy": "^2.0"
     },
