--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     "require": {
         "php": "^8.2",
         "inertiajs/inertia-laravel": "^1.0",
+        "kreait/laravel-firebase": "^5.8",
         "laravel/framework": "^11.0",
         "laravel/horizon": "^5.24",
         "laravel/jetstream": "^5.0",
@@ -19,7 +20,8 @@
         "opcodesio/log-viewer": "^3.8",
         "spatie/laravel-activitylog": "^4.8",
         "spatie/laravel-permission": "^6.4",
-        "tightenco/ziggy": "^2.0"
+        "tightenco/ziggy": "^2.0",
+        "tymon/jwt-auth": "^2.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
