--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,8 @@
         "laravel/socialite": "^5.12",
         "laravel/tinker": "^2.9",
         "opcodesio/log-viewer": "^3.8",
+        "pragmarx/google2fa-laravel": "^2.2",
+        "pragmarx/google2fa-qrcode": "^3.0",
         "spatie/laravel-activitylog": "^4.8",
         "spatie/laravel-permission": "^6.4",
         "tightenco/ziggy": "^2.0",
