--- a/package.json
+++ b/package.json
@@ -21,6 +21,22 @@
         "vue": "^3.3.13"
     },
     "dependencies": {
+        "@ckeditor/ckeditor5-alignment": "^41.4.2",
+        "@ckeditor/ckeditor5-autoformat": "^41.4.2",
+        "@ckeditor/ckeditor5-basic-styles": "^41.4.2",
+        "@ckeditor/ckeditor5-build-classic": "^41.4.2",
+        "@ckeditor/ckeditor5-dev-translations": "^40.2.2",
+        "@ckeditor/ckeditor5-editor-classic": "^41.4.2",
+        "@ckeditor/ckeditor5-font": "^41.4.2",
+        "@ckeditor/ckeditor5-heading": "^41.4.2",
+        "@ckeditor/ckeditor5-language": "^41.4.2",
+        "@ckeditor/ckeditor5-link": "^41.4.2",
+        "@ckeditor/ckeditor5-list": "^41.4.2",
+        "@ckeditor/ckeditor5-theme-lark": "^41.4.2",
+        "@ckeditor/ckeditor5-utils": "^41.4.2",
+        "@ckeditor/ckeditor5-vue": "^5.1.0",
+        "@ckeditor/vite-plugin-ckeditor5": "^0.1.3",
+        "ckeditor5-build-classic": "^1.0.0",
         "element-plus": "^2.6.3",
         "lodash.debounce": "^4.0.8",
         "pinia": "^2.1.7"
